--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple, efficient, and tiny jsonp library for the browser.",
   "main": "dist/jsonp.min.js",
   "scripts": {
-    "test": "zuul --local -- tests/*.js"
+    "test-local": "zuul --local -- tests/*.js",
+    "test": "zuul -- tests/*.js"
   },
   "directories": {
     "tests": "tests"
@@ -29,6 +30,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
     "querystring": "^0.2.0",
+    "tap-spec": "^4.1.1",
     "tape": "^4.2.2"
   }
 }
