--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
-    "querystring": "^0.2.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.2.2"
+    "tape": "^4.2.2",
+    "zuul": "^3.8.0"
   }
 }
